# inclusio

./: .editorconfig  .gitignore  .latexmkrc  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  Makefile  README.md  SECURITY.md  SUPPORT.md  cliff.toml  flake.nix  glama.json  pyproject.toml  server.json
.claude/skills/euxis-publisher/: SKILL.md
.claude/skills/inclusio/: SKILL.md
.cursor/rules/: euxis-publisher.mdc  inclusio.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  engine-validation.yml  latex-excellence.yml  mcp-inspect.yml  pre-commit-autoupdate.yml  publish-mcp.yml  release.yml  texlive-nightly.yml  verapdf.yml
benches/: README.md  test_benchmark_hot_paths.py
core/: README.md
core/cls/: pub-arxiv.cls  pub-base.cls  pub-bio.cls  pub-cv.cls  pub-faq.cls  pub-guide.cls  pub-paper.cls  pub-patent-us.cls  pub-patent.cls  pub-preprint.cls  pub-prime.cls
core/sty/: pub-buildmodes.sty  pub-colors.sty  pub-common.sty  pub-metadata.sty  pub-typography.sty
data/: README.md  cv-data.yaml  faq-data.yaml  guide-data.yaml  meta.yaml  paper-data.yaml  stopwords.txt
data/blog/: insights-blog.yaml  security-bug-blog.yaml  whisper-blog.yaml
data/jobs/: test.txt
docs/: README.md  architecture.md  audit-2026-05.md  classes-and-styles.md  conf.py  implementation-plan-2026.md  index.md  judges.md  macro-reference.md  mcp-server.md  multi-format.md  package-reference.md  provenance.md  public-private-boundary.md  quickstart.md  strategy-2026.md  tagged-pdf.md  testing-and-ci.md  usage.md
docs/audit/: 2026-05.md  implementation-plan-2026.md  strategy-2026.md
docs/tutorials/: 01-tagged-pdf.md  02-judge-cv.md  03-mcp-agent.md  04-camera-ready.md  index.md
euxis_publisher/: __init__.py
euxis_publisher/cli/: README.md  __init__.py  audit.py  build.py  import_resume.py  render.py  sitemap.py  tailor.py
euxis_publisher/emit/: __init__.py  pandoc.py
euxis_publisher/judge/: __init__.py  ats.py  citations.py  cloud_llm.py  jd_fit.py  local_llm.py
euxis_publisher/mcp/: server.py
euxis_publisher/provenance/: __init__.py  c2pa.py  pades.py
euxis_publisher/tools/: __init__.py  fix_semantic.py  overlay.py  stamp_pdfs.py
examples/: README.md
examples/01-hello-world/: Makefile  README.md
examples/01-hello-world/data/: meta.yaml
examples/01-hello-world/src/: hello.tex
examples/02-cv-from-jsonresume/: Makefile  README.md  brief.txt  resume.json
examples/02-cv-from-jsonresume/data/: meta.yaml
examples/03-paper-with-citations/: Makefile  README.md
examples/03-paper-with-citations/data/: meta.yaml
examples/03-paper-with-citations/src/: paper.tex
examples/04-mcp-agent/: README.md
examples/04-mcp-agent/claude-skill/: SKILL.md
examples/05-c2pa-sign/: Makefile  README.md
examples/06-pades-sign/: Makefile  README.md
inclusio/: README.md  __init__.py
inclusio/cli/: README.md  __init__.py  audit.py  build.py  import_resume.py  render.py  sitemap.py  tailor.py
inclusio/emit/: __init__.py  pandoc.py
inclusio/judge/: __init__.py  ats.py  citations.py  jd_fit.py  local_llm.py
inclusio/mcp/: __init__.py  server.py
inclusio/pdf/: __init__.py  post_process.py
inclusio/provenance/: c2pa.py  pades.py
inclusio/tools/: README.md  __init__.py  fix_semantic.py  overlay.py  stamp_pdfs.py
scripts/: README.md  __init__.py  asset-pipeline.sh  build.py  check-semantic.sh  fix-semantic.py  render.py  sitemap.py  stamp-pdfs.py  tailor.py
src/: README.md
src/bios/: bio.tex
src/cvs/: cv.tex
src/faqs/: faqs.tex
src/guides/: user-guide.tex
src/papers/: arxiv-paper.tex  patent-paper.tex  preprint-paper.tex  prime-paper.tex  whisper-mps-realtime-asr.tex
src/patents/patent/: patent.tex
templates/: README.md  blog-post.md.j2  cv.tex.j2  faq.tex.j2  guide.tex.j2  paper.tex.j2
tests/: README.md  conftest.py  test_ai_disclosure.py  test_assets.py  test_audit_edges.py  test_benchmark_hot_paths.py  test_build.py  test_build_script.py  test_citation.py  test_cmd_emit.py  test_cmd_import_provenance.py  test_cmd_judge.py  test_coverage_gap_close.py  test_eaa.py  test_emit_pandoc.py  test_engine_smoke.py  test_fix_semantic.py  test_import_resume.py  test_judge_ats.py  test_judge_citations.py  test_judge_cloud_llm.py  test_judge_jd_fit.py  test_judge_local_llm.py  test_macro_contract.py  test_mcp_server.py  test_overlay.py  test_pdf_ua.py  test_pdf_ua_classes.py  test_pdf_validation.py  test_provenance_c2pa.py  test_provenance_pades.py  test_render.py  test_render_coverage.py  test_render_text.py  test_semantic.py  test_semantic_edges.py  test_sitemap.py  test_source_entrypoints.py  test_stamp_pdfs.py  test_tailor.py
