[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "euxis-publisher"
version = "0.1.0"
description = "Professional document publishing engine for the Euxis Agent Framework"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sebastien Rousseau", email = "contact@sebastienrousseau.com" }
]
license = { text = "MIT" }
keywords = ["latex", "publishing", "euxis", "pdfa", "uspto", "arxiv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pikepdf>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "furo>=2024.0.0",
]

[project.scripts]
euxis-publisher = "scripts.build:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers"
cache_dir = "/tmp/euxis-publisher-pytest-cache"
