[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inclusio"
version = "0.0.6"
description = "Accessibility-first publishing engine — PDF/UA-2 + WTPDF + PDF/A-4f, C2PA + PAdES + SLSA provenance, multi-format emission, MCP server."
readme = "README.md"
# 3.11 is the floor: 3.9 EOL'd Oct-2025, 3.10 EOLs Oct-2026.
# Keeps one-minor gap against the private content repo (>=3.12) so
# Linux LTS distros that pin 3.11 can still consume the engine.
requires-python = ">=3.11"
authors = [
    { name = "Sebastien Rousseau", email = "contact@sebastienrousseau.com" }
]
license = { text = "MIT" }
keywords = [
    "latex",
    "publishing",
    "euxis",
    "pdfa",
    "pdfua",
    "wtpdf",
    "accessibility",
    "eaa",
    "wcag",
    "tagged-pdf",
    "uspto",
    "arxiv",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pikepdf>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=5.0",
    "ruff>=0.6.0",
    "interrogate>=1.7",
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "furo>=2024.0.0",
]
# Sprint 6 (S6.4): MCP server. `mcp[cli]` is the official Python SDK
# from modelcontextprotocol/python-sdk and includes FastMCP +
# inspector. Optional so `pip install inclusio` stays minimal
# for callers that only want the CLI + audit gate.
mcp = [
    "mcp[cli]>=1.27.0",
]
# Sprint 8.5 (#11 / F7 closure): PAdES eIDAS-aligned PDF signing
# via pyhanko. Optional because pyhanko pulls in a small dependency
# tree (asn1crypto, oscrypto, cryptography). Callers that only need
# C2PA Content Credentials (S8) don't need it — c2patool stays a
# subprocess shell-out.
provenance = [
    "pyhanko>=0.22",
]

[project.urls]
Homepage = "https://github.com/sebastienrousseau/inclusio"
Documentation = "https://github.com/sebastienrousseau/inclusio/tree/main/docs"
Issues = "https://github.com/sebastienrousseau/inclusio/issues"
Changelog = "https://github.com/sebastienrousseau/inclusio/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    "build",
    "docs/_build",
    # `scripts/` ships thin star-import shims (kept for backwards
    # compatibility with pre-package callers); F403/F405 there are
    # intentional and don't deserve the linter noise.
    "scripts",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line-too-long: XMP XML helpers in audit.py are verbatim
    "B007",   # unused loop-control vars: common in match-pattern code
    # SIM, RUF dropped from `select` above:
    #   SIM108/110 are taste calls (ternary vs if/else), and
    #   RUF001-3 flag typographic dashes / × in docstrings — we are a
    #   typography engine, those characters are deliberate.
]

[tool.ruff.lint.per-file-ignores]
# The mock-heavy tailor/build test suites grew in the pre-ruff era;
# grandfather their style debt rather than churn 800 lines of tests.
"tests/test_tailor.py" = ["SIM117", "I001", "F401", "F841"]
"tests/test_build.py" = ["F841", "SIM117"]
"tests/test_build_script.py" = ["F841", "SIM117"]
"tests/test_render.py" = ["F841", "SIM117"]
"tests/test_pdf_validation.py" = ["F841", "SIM117"]
"tests/test_stamp_pdfs.py" = ["F841", "SIM117"]
"tests/test_fix_semantic.py" = ["F841", "SIM117"]

[tool.ruff.format]
quote-style = "double"

[project.scripts]
inclusio = "inclusio.cli.build:main"
inclusio-mcp = "inclusio.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["inclusio*"]
exclude = ["tests*", ".claude*", ".cursor*"]

[tool.pytest.ini_options]
testpaths = ["tests", "benches"]
python_files = "test_*.py"
addopts = "--strict-markers"
cache_dir = "/tmp/inclusio-pytest-cache"

[tool.coverage.run]
source = ["inclusio"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ── Docstring coverage (interrogate) ───────────────────────────────────
# Enforced at 100% in CI. Module/class/function docstrings are part of
# the engine's public contract — every public symbol must be documented.
[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
fail-under = 100
exclude = ["build", "docs", "tests", "scripts"]
verbose = 1
omit-covered-files = false
quiet = false
color = true

# ── Microbenchmarks (pytest-benchmark) ─────────────────────────────────
# Observation by default; CI stores benchmark JSON for trend analysis.
# Promote to a regression gate when we have a baseline file checked in
# (use `--benchmark-compare-fail=mean:5%`).
[tool.pytest-benchmark]
min_rounds = 10
warmup = false
